# pairs_computer_vision_examples

./: README.md
cpp/edge_detector/: CMakeLists.txt  README.md  nodelets.xml  package.xml
cpp/edge_detector/launch/: edge_detector.launch
cpp/edge_detector/src/: edge_detector.cpp
cpp/edge_detector/tmux/: session.yml  start.sh
python/blob_detector/: CMakeLists.txt  package.xml
python/blob_detector/launch/: blob_detector.launch
python/blob_detector/tmux/: session.yml  start.sh
python/blob_detector/tmux/config/: custom_config.yaml
